--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "cp db/seeds.json db/db.json"
   },
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "json-server": "^0.16.3"
   },
